--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 
 .container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .search-bar {
@@ -50,6 +51,7 @@
 }
 
 .card-container {
+  flex: 1;
   display: flex;
   flex-direction: row;
   margin-bottom: 20px;
